# tgtgReminder

./: .gitignore  README.md  pyproject.toml
tgtgreminder/: .env_dist  config.py  main.py
